Feature/3.2/java 17 sonar fixes (#123)
Java 17 sonar fixes.
There are still 2 issues found, that ServiceReturn and CasualFielded should be made into records.
That is correct, however they live in the API and we would need to do a major release to fix that.

Thus they should remain as issues, no supression, until we make a major release can convert them into records.